--- a/fronted/public/views/vizualisar/html/crear_asociacion.html
+++ b/fronted/public/views/vizualisar/html/crear_asociacion.html
@@ -6,7 +6,7 @@
     <title>Crear Asociación</title>
     <link rel="stylesheet" href="../css/styleprac.css">
     <link rel="stylesheet" href="../css/crear-asociacion.css">
-    </head>
+</head>
 <body class="pagina">
     <header class="cabecera">
         <div class="cabecera__logo">
@@ -32,34 +32,63 @@
             </section>
             <section class="estilos">
                 <div class="estilos__grid">
-                    <div class="crear-asociacion">
-                        <h2 class="crear-asociacion__title tarjeta__titulo">Formulario de Asociación</h2>
-                        <form class="crear-asociacion__form formulario">
-                            <div class="crear-asociacion__field campo">
-                                <label for="usuario" class="crear-asociacion__label">Usuario:</label>
-                                <input type="text" id="usuario" name="usuario" class="crear-asociacion__input">
+                    <div class="tarjeta estilo-info">
+                        <h2 class="tarjeta__titulo">Estilo Infografía</h2>
+                        <div class="info-contenido">
+                            <div class="info-contenido__izq">
+                                <p class="info-contenido__texto">Contenido Aquí</p>
+                                <img src="/fronted/public/img/Fotos-portada-17-1-800x445.png" alt="Planta" class="info-contenido__img">
+                                <p class="info-contenido__etiqueta">Ventajas Comida Local</p>
                             </div>
-                            <div class="crear-asociacion__field campo">
-                                <label for="ciclo_cultivo" class="crear-asociacion__label">Ciclo de Cultivo:</label>
-                                <input type="text" id="ciclo_cultivo" name="ciclo_cultivo" class="crear-asociacion__input">
+                            <div class="info-contenido__der">
+                                <p class="info-contenido__titulo-cosecha">Ventajas Cosecha Global</p>
+                                <p class="info-contenido__texto-cosecha">Información sobre ventajas globales de la cosecha.</p>
+                                <p class="info-contenido__texto">Contenido Aquí</p>
                             </div>
-                            <div class="crear-asociacion__field campo">
-                                <label for="sensor" class="crear-asociacion__label">Sensor:</label>
-                                <select id="sensor" name="sensor" class="crear-asociacion__select">
-                                    <option value="">-- Seleccionar --</option>
-                                    <option value="temperatura">Temperatura</option>
-                                    <option value="humedad">Humedad</option>
-                                    </select>
+                        </div>
+                        <div class="tarjeta__contenedor-img">
+                            <img src="/fronted/public/img/granos.webp" alt="Estilo Infografía" class="tarjeta__img">
+                        </div>
+                    </div>
+                    <div class="tarjeta estilo-info">
+                        <h2 class="tarjeta__titulo">Estilo Infografía</h2>
+                        <div class="info-contenido">
+                            <div class="info-contenido__izq">
+                                <p class="info-contenido__texto">Contenido Aquí</p>
+                                <img src="/fronted/public/img/fondocampo.jpg" alt="Planta" class="info-contenido__img">
+                                <p class="info-contenido__etiqueta">Ventajas Comida Local</p>
                             </div>
-                            <div class="crear-asociacion__field campo">
-                                <label for="insumo" class="crear-asociacion__label">Insumo:</label>
-                                <input type="text" id="insumo" name="insumo" class="crear-asociacion__input">
+                            <div class="info-contenido__der">
+                                <p class="info-contenido__titulo-cosecha">Ventajas Cosecha Global</p>
+                                <p class="info-contenido__texto-cosecha">Información sobre ventajas globales de la cosecha.</p>
+                                <p class="info-contenido__texto">Contenido Aquí</p>
                             </div>
-                            <button type="submit" class="crear-asociacion__button boton">Crear Asociación</button>
-                        </form>
+                        </div>
+                        <div class="tarjeta__contenedor-img">
+                            <img src="/fronted/public/img/Ripe-cherries_sarahemcc.jpg" alt="Estilo Infografía" class="tarjeta__img">
+                        </div>
+                    </div>
+                    <div class="tarjeta estilo-info">
+                        <h2 class="tarjeta__titulo">Estilo Infografía</h2>
+                        <div class="info-contenido">
+                            <div class="info-contenido__izq">
+                                <p class="info-contenido__texto">Contenido Aquí</p>
+                                <img src="/fronted/public/img/Ripe-cherries_sarahemcc.jpg" alt="Planta" class="info-contenido__img">
+                                <p class="info-contenido__etiqueta">Ventajas Comida Local</p>
+                            </div>
+                            <div class="info-contenido__der">
+                                <p class="info-contenido__titulo-cosecha">Ventajas Cosecha Global</p>
+                                <p class="info-contenido__texto-cosecha">Información sobre ventajas globales de la cosecha.</p>
+                                <p class="info-contenido__texto">Contenido Aquí</p>
+                            </div>
+                        </div>
+                        <div class="tarjeta__contenedor-img">
+                            <img src="/fronted/public/img/images (2).jpeg" alt="Estilo Infografía" class="tarjeta__img">
+                        </div>
                     </div>
                 </div>
             </section>
+            <a href="#" class="crear-asociacion-boton">Crear Asociación</a>
         </div>
     </main>
 </body>
