--- a/fronted/public/views/vizualisar/html/generar_reporte.html
+++ b/fronted/public/views/vizualisar/html/generar_reporte.html
@@ -39,7 +39,7 @@
                             <option value="pdf">PDF</option>
                         </select>
                     </div>
-                    <button type="submit" class="boton">Generar Reporte</button>
+                    <button type="submit" class="boton"><a href="practica.html"></a>Generar Reporte</button>
                 </form>
             </div>
         </section>
